# gnome-speech2text

./: .eslintrc.js  .gitignore  CHANGELOG.md  CLAUDE.md  DBUS_ARCHITECTURE.md  LICENSE  Makefile  README.md  TESTING.md  debug-crash.sh  extension.js  install.sh  metadata.json  package-lock.json  package.json  package.sh  requirements.txt  setup_env.sh  test.py  test_wayland.py  tsconfig.json  tsconfig.test.json  whisper_typing.py
.github/workflows/: test.yml
schemas/: org.gnome.shell.extensions.whisper-typing.gschema.xml
scripts/: build_deb.sh  install.sh  package_zip.sh  setup_env.sh  uninstall.sh
service/: README.md  install.sh  pyproject.toml  requirements.txt
service-openai/: README.md  pyproject.toml  requirements.txt
service-openai/data/: org.gnome.Shell.Extensions.Speech2Text.service
service-openai/src/gnome_speech2text_service_openai/: __init__.py  cli.py  service.py
service-whispercpp/: README.md  install.sh  pyproject.toml  requirements.txt
service-whispercpp/data/: org.gnome.Shell.Extensions.Speech2TextWhisperCpp.service  org.gnome.Shell.Extensions.Speech2TextWhisperCpp.xml
service-whispercpp/src/gnome_speech2text_service_whispercpp/: __init__.py  cli.py  service.py  setup.py  whisper_cpp_client.py
service-whispercpp/test/: test_mic.py
service/data/: org.gnome.Shell.Extensions.Speech2Text.service  org.gnome.Shell.Extensions.Speech2Text.xml  org.gnome.Speech2Text.xml
service/src/gnome_speech2text_service/: __init__.py  cli.py  service.py
speech2text-service/: README.md  install.sh  org.gnome.Speech2Text.service  org.gnome.Speech2Text.xml  requirements.txt  setup.py  speech2text-service  speech2text_service.py
src/: extension.js  extension.ts  install-service-whispercpp.sh  install-service.sh  metadata.json  post-install.sh  prefs.js  wayland_typing.py  whisper_typing.py
src/lib/: buttonUtils.js  constants.js  constants.ts  dbusManager.js  focusUtils.js  focusUtils.ts  keybindingManager.js  recordingController.js  recordingDialog.js  recordingDialog.ts  recordingStateManager.js  resourceUtils.js  resourceUtils.ts  serviceManager.js  settingsDialog.js  setupDialog.js  setupUtils.js  setupUtils.ts  shortcutCapture.js  transcriptionProgress.js  uiManager.js  uiUtils.js  uiUtils.ts
src/schemas/: org.gnome.shell.extensions.gnome-speech2text.gschema.xml  org.gnome.shell.extensions.speech2text.gschema.xml  org.gnome.shell.extensions.whisper-typing.gschema.xml  org.shell.extensions.speech2text.gschema.xml
src/types/: extension.d.ts  gi.d.ts  gnome-shell.d.ts
src/types/gi/: Clutter.d.ts  GLib.d.ts  Gio.d.ts  Meta.d.ts  Shell.d.ts  St.d.ts
tests/: setup.js  setup.ts
tests/__mocks__/: extension.js  gi-clutter.js  gi-gio.js  gi-glib.js  gi-meta.js  gi-shell.js  gi-st.js  main.js  panelMenu.js  popupMenu.js
tests/integration/: extension-python.test.js  extension-python.test.ts
tests/js/lib/: constants.test.js  constants.test.ts  uiUtils.test.js  uiUtils.test.ts
tests/python/: conftest.py  test_whisper_typing.py  test_whisper_typing_simple.py
